建立新商品、編輯商品功能完成

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       integrity="sha512-i9cEfJwUwViEPFKdC1enz4ZRGBj8YQo6QByFTF92YXHi7waCqyexvRD75S5NVTsSiTv7rKWqG9Y5eFxmRsOn0A=="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
